z-index fix

--- a/blocks/b-card/b-card.css
+++ b/blocks/b-card/b-card.css
@@ -19,6 +19,7 @@ body .b-card__side
 
 .b-card__side
 {
+    z-index: 1;
     top: 0;
     left: 0;
 
@@ -35,7 +36,7 @@ body .b-card__side
 
 .b-card__side_state_opened
 {
-    z-index: 1;
+    z-index: 2;
 
     -webkit-transition: all .4s ease-in-out;
     -webkit-transform: rotateX(0);
